--- a/styles.css
+++ b/styles.css
@@ -153,7 +153,7 @@ body{
 
 					}
 					.popup_email_form input {
-						width: 150px;
+						width: 240px;
 						height: 27px;
 						margin-bottom: 10px;
 						display: block;
@@ -720,8 +720,29 @@ body{
 							.whatido_content{
 								margin: 0 40px 20px;
 							}
+							.bg_symbol_item1{
+								top: -36px;
+							}
+							.bg_symbol_item4{
+								top: 20px;
+								left: 61%;
+							}
+							.bg_symbol_item3{
+								display: none;
+							}
 
 						}
+						@media (max-width: 670px){
+							.footer_container{
+								-webkit-flex-direction: column;
+								-moz-flex-direction: column;
+								-ms-flex-direction: column;
+								-o-flex-direction: column;
+								flex-direction: column;
+							}
+
+						}
+
 						@media (max-width: 580px){
 							.header_right-column div{
 								margin-right: 0;
@@ -765,7 +786,6 @@ body{
 							}
 						}
 
-
 						@media (max-width: 410px){
 							#header_left-column_block{
 								width: 30px;
@@ -773,7 +793,7 @@ body{
 								text-align: center;
 							}
 						}
-						@media (max-width: 410px){
+
 							.header_right-column a{
 								font-size: 18px;
 							}
@@ -801,23 +821,3 @@ body{
 						#bg {
 													}
 					}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
