--- a/styles.css
+++ b/styles.css
@@ -80,6 +80,7 @@ body{
 						padding: 40px 0;
 					}
 					.popup_tel_form {
+						display: none;
 						width: 300px;
 						height: 350px;
 						position: relative;
@@ -137,6 +138,10 @@ body{
 						background:#000;
 						opacity:1;
 						z-index: 10;
+					}
+					.fixed{
+						position: fixed;
+						width: 100%;	
 					}
 				.popup_email_form {
 						width: 338px;
@@ -792,7 +797,6 @@ body{
 								height: 35px;
 								text-align: center;
 							}
-						}
 
 							.header_right-column a{
 								font-size: 18px;
@@ -800,21 +804,21 @@ body{
 							.bg_text{
 								margin: 0 auto;
 							}
-					header{
-						margin: 0 20px;
-					}
-					#whatido{
-						margin: 0 20px;
-					}
-					#mywork{
-						margin: 0 20px;
-					}
-					footer{
-						margin: 0 20px;
-					}
-					.font_text{
-						padding: 50px 20px 70px;
-					}
+							header{
+								margin: 0 20px;
+							}
+							#whatido{
+								margin: 0 20px;
+							}
+							#mywork{
+								margin: 0 20px;
+							}
+							footer{
+								margin: 0 20px;
+							}
+							.font_text{
+								padding: 50px 20px 70px;
+							}
 						}
 
 					@media (max-width: 330px){
