--- a/styles.css
+++ b/styles.css
@@ -80,7 +80,6 @@ body{
 						padding: 40px 0;
 					}
 					.popup_tel_form {
-						display: none;
 						width: 300px;
 						height: 350px;
 						position: relative;
@@ -137,7 +136,7 @@ body{
 						left:0;
 						background:#000;
 						opacity:1;
-						z-index: 10;
+						z-index: 11;
 					}
 					.fixed{
 						position: fixed;
@@ -155,6 +154,7 @@ body{
 						opacity: 1;
 						display: flex;
 						flex-direction: column;
+
 
 					}
 					.popup_email_form input {
@@ -200,7 +200,7 @@ body{
 						left:0;
 						background:#000;
 						opacity:1;
-						z-index: 10;
+						z-index: 11;
 					}
 
 					.header_left-column{
@@ -261,8 +261,7 @@ body{
 						background-image:url(img/man.png), url(img/background.jpg);
 						background-size: contain;
 						background-repeat: no-repeat;
-						background-position: bottom right 16%, top right -8%;
-						background-position-y: 0, 120px;
+						background-position: 84% 0, 108% 120px;
 					}
 					.bg_symbol{
 						max-width: 100%;
@@ -277,7 +276,6 @@ body{
 					}
 					.bg_symbol_item1{
 						font-size: 30px;
-						font-family: "Roboto";
 						color: #f91482;
 						font-weight: bold;
 						position: absolute;
@@ -290,7 +288,6 @@ body{
 					}
 					.bg_symbol_item2{
 						font-size: 57px;
-						font-family: "Roboto";
 						color: #f91482;
 						font-weight: bold;
 						position: absolute;
@@ -311,7 +308,6 @@ body{
 					}
 					.bg_symbol_item4{
 						font-size: 37px;
-						font-family: "Roboto";
 						color: #f91482;
 						font-weight: bold;
 						position: absolute;
@@ -322,7 +318,6 @@ body{
 					}
 					.bg_symbol_item5{
 						font-size: 48px;
-						font-family: "Roboto";
 						color: #f91482;
 						font-weight: bold;
 						position: absolute;
@@ -413,7 +408,7 @@ body{
 						border: 0;
 						box-shadow: 5px 5px 5px 0 rgb(133, 133, 133) ;
 						border-radius: 100px;
-						z-index: 100;
+						z-index: 10;
 						
 					}
 					.button_arrow_right{
@@ -469,7 +464,6 @@ body{
 								}
 					.font_symbol_item1{
 						font-size: 50px;
-						font-family: "Roboto";
 						color: rgb(255, 255, 255);
 						font-weight: bold;
 						position: absolute;
@@ -482,7 +476,6 @@ body{
 					}
 					.font_symbol_item2{
 						font-size: 57px;
-						font-family: "Roboto";
 						color: rgb(255, 255, 255);
 						font-weight: bold;
 						position: absolute;
@@ -503,7 +496,6 @@ body{
 					}
 					.font_symbol_item4{
 						font-size: 37px;
-						font-family: "Roboto";
 						color: rgb(255, 255, 255);
 						font-weight: bold;
 						position: absolute;
@@ -514,7 +506,6 @@ body{
 					}
 					.font_symbol_item5{
 						font-size: 48px;
-						font-family: "Roboto";
 						color: rgb(255, 255, 255);
 						font-weight: bold;
 						position: absolute;
@@ -642,9 +633,8 @@ body{
 						margin:0 40px;
 					}
 					.bg{
-						background-position: bottom right 16%, top right -43%;
-    					background-position-y: 0, 120px;
-					}
+						background-position: 84% 0, 158% 120px;
+    										}
 					.bg_text{
 						margin-left:40px;
 					}
@@ -825,3 +815,15 @@ body{
 						#bg {
 													}
 					}
+
+
+
+
+
+
+
+
+
+
+
+
